--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,8 +1,11 @@
 body {
-	margin: 0px;
-	padding: 0px;
-	height: 100%;
-	color: #484848;
-	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-size: 14px;
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: #FFFFFF;
+    color: #484848;
+    font-size: 14px;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
