--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,26 +1,28 @@
-.filters{
-    background-color: white;
+.filters {
+    background-color: #FFFFFF;
     height: 70px;
     width: 100%;
-    border: solid 1px #DDDDDD;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    text-align: right;
+    justify-content: right;
 }
 
-section.filters button{
+button {
     font-size: 18px;
-    color: white;
     background-color: #FF5A5F;
+    color: #FFFFFF;
     height: 48px;
-    border: 0px;
-    border-radius: 4px;
     width: 20%;
+    border-radius: 4px;
     margin-right: 30px;
-    opacity: 1;
+    text-align: center;
+    opacity: 1.0;
+    filter: alpha(opacity=100);
 }
-section.filters button:hover{
+
+button:hover {
     opacity: 0.9;
+    filter: alpha(opacity=100);
 }
