--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,139 +1,100 @@
-.places{
+.places {
     display: flex;
-    flex-direction: column;
-    padding-left: 30px;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
 }
-.places h1{
+
+.places h1 {
+    height: 30px;
+    width: 100%;
     font-size: 30px;
+    padding-left: 3%;
 }
-.places_title{
-    padding-top: 30px;
-    margin-bottom: -25px;
-}
-.articles{
+
+article {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-article{
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    align-content: flex-start;
+    height: 390px;
     width: 390px;
-    margin: 20px;
     padding: 20px;
-    border: solid #FF5A5F 1px;
+    margin: 20px;
+    border: 1px solid #FF5A5F;
     border-radius: 4px;
+    
+}
+
+.title_of_place {
+    display: flex;
+    height: 30px;
     text-align: center;
     font-size: 30px;
+    margin-top: auto;
+}
+
+.price_by_night {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-bottom: 30px;
-    position: relative;
-}
-article h2{
-    font-size: 30px;
-    margin-top: -1px;
-    padding-left: 0%;
-}
-.article_title{
-    width: 100%;
-}
-.price_by_night{
+    align-items: center;
+    justify-content: center;
     color: #FF5A5F;
-    border: 4px solid #FF5A5F;
     min-width: 60px;
+    width: 60px;
     height: 60px;
     font-size: 30px;
+    border: 4px solid #FF5A5F;
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-left: auto;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    margin-top: -5px;
 }
-.price{
-    margin-top: -1px;
+
+.tripleDigits {
+    font-size: 25px;
 }
-.price_title{
-    display: flex;
-}
-.information{
-    height:80px;
-    border-top: solid #DDDDDD 1px;
-    border-bottom: solid #DDDDDD 1px;
+
+.information {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-}
-.max_guest{
-    width: 100px;
-    display: flex;
-    height: inherit;
-    flex-direction: column;
-    justify-content: center;
-}
-.guest_icon{
-    height: inherit;
-    width: inherit;
-    background: url("../images/icon_group.png");
-    background-repeat: no-repeat;
-    margin-left: 35px;
-}
-.guest_number h2{
-    font-size: 14px;
-    color:  #484848;
-    font-weight: normal;
+    justify-content: space-evenly;
+    height: 80px;
+    width: 100%;
+    border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
+    margin-top: 10px
 }
 
-.number_rooms{
-    width: 100px;
-    display: flex;
-    height: inherit;
-    flex-direction: column;
-    justify-content: center;
-}
-.rooms_icon{
-    height: inherit;
-    width: inherit;
-    background: url("../images/icon_bed.png");
-    background-repeat: no-repeat;
-    margin-left: 35px;
-}
-.rooms_number h2{
-    font-size: 14px;
-    color:  #484848;
-    font-weight: normal;
+.max_guest {
+    background-image: url("../images/guests.png");
+    background-position: top;
+    background-repeat: no-repeat;   
 }
 
-.number_bathrooms{
-    width: 100px;
-    display: flex;
-    height: inherit;
-    flex-direction: column;
-    justify-content: center;
+.max_guest p {
+    margin-top: 50px
 }
-.bathrooms_icon{
-    height: inherit;
-    width: inherit;
-    background: url("../images/icon_bath.png");
-    background-repeat: no-repeat;
-    margin-left: 35px;
+.number_rooms {
+    background-image: url("../images/bedrooms.png");
+    background-position: top;
+    background-repeat: no-repeat;   
 }
-.bathrooms_number h2{
-    font-size: 14px;
-    color:  #484848;
-    font-weight: normal;}
-.user{
-    font-size: 14px;
-    color: #484848;
-    text-align: left;
-    margin-top: 15px;
+
+.number_rooms p {
+    margin-top: 50px
 }
-.description{
-    font-size: 14px;
-    text-align: left;
-    margin-top: 7px;
-    margin-bottom: 0px;
+.number_bathrooms {
+    background-image: url("../images/bathrooms.png");
+    background-position: top;
+    background-repeat: no-repeat;   
+}
+
+.number_bathrooms p {
+    margin-top: 50px
+}
+
+.user {
+    margin-right: auto;
+}
+
+.ownerBold {
+    font-weight: bold;
 }
